--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,69 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 100;
+  src: url("/assets/fonts/Outfit-Thin.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 200;
+  src: url("/assets/fonts/Outfit-ExtraLight.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 300;
+  src: url("/assets/fonts/Outfit-Light.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/assets/fonts/Outfit-Regular.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/assets/fonts/Outfit-Medium.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 600;
+  src: url("/assets/fonts/Outfit-SemiBold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/assets/fonts/Outfit-Bold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 800;
+  src: url("/assets/fonts/Outfit-ExtraBold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 900;
+  src: url("/assets/fonts/Outfit-Black.ttf") format("ttf");
+}
+
 /* Global Scrollbar Styles */
 ::-webkit-scrollbar {
   width: 12px; /* Vertical scrollbar width */
