--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6,63 +6,63 @@
   font-family: "Outfit";
   font-style: normal;
   font-weight: 100;
-  src: url("/assets/fonts/Outfit-Thin.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-Thin.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 200;
-  src: url("/assets/fonts/Outfit-ExtraLight.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-ExtraLight.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 300;
-  src: url("/assets/fonts/Outfit-Light.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-Light.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 400;
-  src: url("/assets/fonts/Outfit-Regular.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-Regular.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 500;
-  src: url("/assets/fonts/Outfit-Medium.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-Medium.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 600;
-  src: url("/assets/fonts/Outfit-SemiBold.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-SemiBold.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 700;
-  src: url("/assets/fonts/Outfit-Bold.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-Bold.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 800;
-  src: url("/assets/fonts/Outfit-ExtraBold.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-ExtraBold.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Outfit";
   font-style: normal;
   font-weight: 900;
-  src: url("/assets/fonts/Outfit-Black.ttf") format("ttf");
+  src: url("../../public/fonts/Outfit-Black.ttf") format("ttf");
 }
 
 /* Global Scrollbar Styles */
